--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.10.7",
     "framer-motion": "^7.5.0",
     "next": "12.3.1",
+    "next-intl": "^2.7.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
