--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.7",
     "framer-motion": "^7.5.0",
-    "next": "12.3.1",
+    "next": "^12.3.1",
     "next-intl": "^2.7.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
-    "postcss": "^8.4.16",
+    "postcss": "^8.4.17",
     "tailwindcss": "^3.1.8"
   }
 }
