--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "^12.3.1",
     "next-intl": "^2.7.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "serverless-mysql": "^1.5.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
