-translation for cards added -minor icon changes in footer -db config updated

--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
-MYSQL_HOST=127.0.0.1
+MYSQL_HOST=161.97.165.160
 MYSQL_PORT=3306
 MYSQL_DATABASE=ymca
-MYSQL_USER=root
-MYSQL_PASSWORD=root
+MYSQL_USER=ymca
+MYSQL_PASSWORD=Ymca@@1234
