--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-intl": "^2.7.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.0",
     "serverless-mysql": "^1.5.4"
   },
   "devDependencies": {
