--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.0",
-    "react-material-ui-carousel": "^3.4.2",
+    "react-multi-carousel": "^2.8.2",
     "serverless-mysql": "^1.5.4"
   },
   "devDependencies": {
