--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.10.11",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^7.5.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "^12.3.1",
     "next-intl": "^2.7.6",
     "react": "^18.2.0",
