--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.10.11",
+    "axios": "^1.3.3",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^7.5.0",
     "jsonwebtoken": "^8.5.1",
