--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.0",
+    "react-modern-drawer": "^1.2.0",
     "react-multi-carousel": "^2.8.2",
     "serverless-mysql": "^1.5.4"
   },
