--- a/.env.local
+++ b/.env.local
@@ -3,4 +3,4 @@ MYSQL_PORT=3306
 MYSQL_DATABASE=ymca
 MYSQL_USER=ymca
 MYSQL_PASSWORD=Ymca@@1234
-BACKEND_URL=http://priyanshuverma.tech/
+BACKEND_URL=http://49.50.77.87:8888
