--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "framer-motion": "^7.5.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "next": "^12.3.1",
     "next-intl": "^2.7.6",
     "react": "^18.2.0",
